@@ -1,0 +1,10 @@
+package com.ridegroup.yop.api;
+
+/**
+ * Order API
+ *
+ * @author PeterZhang
+ * @date 2020-04-19
+ */
+public class DriverAPI extends BaseAPI {
+}
