@@ -1,0 +1,4 @@
+package com.ridegroup.yop.bean.driver;
+
+public class DriverInfo {
+}
