@@ -1,0 +1,4 @@
+package com.ridegroup.yop.bean.user;
+
+public class UserInfo {
+}
